# censtudy

./: .gitignore  Dockerfile
env/docs/: STUDYML_GUIDE.md  demo.md
env/ref/: ref.html
env/scripts/: export_data.js
src/backend/: .env.example  Cargo.toml  Dockerfile  README.md  demo_content.sql  test_ai.py
src/backend/migrations/: 001_init.sql  002_audit_and_files.sql  003_unit_resources.sql  004_unit_description.sql
src/backend/src/: ai.rs  db.rs  main.rs  models.rs  studyml.rs
src/backend/src/handlers/: ai.rs  audit.rs  auth.rs  content.rs  courses.rs  files.rs  flashcards.rs  mod.rs  quiz.rs  resources.rs  stats.rs  units.rs
src/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/frontend/public/: manifest.json  sw.js
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/components/: AITutorTab.tsx  DriveTab.tsx  FileUpload.tsx  FlashcardsTab.tsx  InteractiveStudyML.tsx  MatchingMode.tsx  QuizTab.tsx  StudyGuideTab.tsx  StudyMLRenderer.tsx  StudyMLWorkbench.tsx
src/frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Textarea.tsx
src/frontend/src/lib/: api.ts  demo_seed.ts  studyml.ts  utils.ts
src/frontend/src/pages/: AuditLogPage.tsx  CourseView.tsx  CreateContent.tsx  CreateCourse.tsx  CreateUnit.tsx  Dashboard.tsx  EditContent.tsx  EditCourse.tsx  EditUnit.tsx  Login.tsx  NotFound.tsx  StatsPage.tsx  UnitView.tsx
