[package]
name = "censtudy-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
axum = { version = "=0.7.7", features = ["multipart"] }
axum-extra = { version = "=0.9.4", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "=0.7.4", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
chrono = { version = "=0.4.38", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9.2"
ammonia = "3.3"
urlencoding = "2.1"
time = "=0.3.36"
url = "=2.5.0"
idna = "=0.5.0"
